Incluído rota de login no swagger, adicionado cookie-parser e jwt
